# metric

./: .vimrc  CMakeLists.txt  README.md  annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html
d0/d98/: structmetric_1_1is__distance.html
d2/dbf/: metric_8h.html  metric_8h_source.html
d3/d80/: structmetric_1_1distance.html
d5/de2/: structmetric_1_1is__distance_3_01const_01volatile_01distance_3_01_repr_00_01_ratio_01_4_01_4.html
d7/dda/: structmetric_1_1is__distance_3_01const_01distance_3_01_repr_00_01_ratio_01_4_01_4.html
d7/df2/: structmetric_1_1is__distance_3_01volatile_01distance_3_01_repr_00_01_ratio_01_4_01_4.html
d8/dbd/: structmetric_1_1is__distance_3_01distance_3_01_repr_00_01_ratio_01_4_01_4.html
d9/dd6/: _r_e_a_d_m_e_8md_source.html
da/db5/: structstd_1_1common__type_3_01metric_1_1distance_3_01_repr1_00_01_ratio1_01_4_00_01metric_1_1dis210a2d8d649589d7e0f8ed48c5417751.html
dc/d0e/: structmetric_1_1distance-members.html
dd/d6f/: namespacemetric.html
doc/: CMakeLists.txt  Doxyfile.in
include/: metric.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js
test/: CMakeLists.txt  gtest.CMakeLists.txt.in  test_metric.cpp
(+2 files in other folders)
